fixes nav spacing

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -27,9 +27,9 @@ body {
 .navbar {
 background-color: white;
 border-bottom: 1px solid #CCB671;
-display: flex;
 width: 100%;
 height: 76px;
+
 
 }
 .logo-text {
@@ -37,11 +37,12 @@ height: 76px;
  font-size: 30px;
  display: inline-block;
  text-decoration: none;
- /* padding: 10px; */
+ padding-top: 20px;
+ padding-left: 10px;
  font-weight: bold;
 }
 
-.navbar-brand {
+.nav {
     font-size: 32px;
     display: inline;
     padding-top: 10px;
@@ -50,6 +51,9 @@ height: 76px;
     padding-right: 8px;
     white-space: normal;
     font-family: 'Raleway', sans-serif;
+    float: right;
+    
+  
   /* outline: 1px solid red */
 }
 
@@ -65,6 +69,11 @@ height: 76px;
     
   
     
+}
+
+.nav-container {
+    float: right;
+    padding: 10px;
 }
 
 
@@ -324,9 +333,11 @@ SKILLS SECTION
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
 }
-@media screen and (min-width: 600px) {
+
+
+@media screen and (min-width: 640px) {
     .navbar-brand {
-        display: flex;
+        display: inline-block;
         justify-content: space-between;  
         align-items: center;
         
@@ -383,11 +394,7 @@ SKILLS SECTION
 
 
 
-nav {
-    float: right;
-    padding-bottom: 30px;
-    /* padding-right: 20px; */
-}
+
 
 #menu-icon {
 
